# blender_ui

./: AUTHORS  GNUmakefile  README.md  meson.build  meson_options.txt
meson/args/: meson.build
meson/cflags/: meson.build
meson/cflags/platform/: meson.build
meson/cflags/platform/linux/: meson.build
meson/const/: meson.build
meson/headers/: meson.build
meson/options/: meson.build
meson/platform/: meson.build
src/lib/: meson.build
src/lib/animrig/: meson.build
src/lib/atomic/: meson.build
src/lib/atomic/intern/: atomic_ops_unix.h
src/lib/blenfont/: meson.build
src/lib/blenkernel/: meson.build  meson_old.build
src/lib/blenlib/: meson.build
src/lib/blenlib/intern/: math_vector_inline.c
src/lib/blentranslation/: meson.build
src/lib/clog/: CLG_log.h  clog.c  meson.build
src/lib/compositor/: meson.build
src/lib/compositor/realtime_compositor/: meson.build
src/lib/compositor/realtime_compositor/shaders/: meson.build
src/lib/datatoc/: meson.build
src/lib/depsgraph/: meson.build
src/lib/draw/: meson.build
src/lib/draw/engines/: meson.build
src/lib/draw/engines/basic/: meson.build
src/lib/draw/engines/basic/shaders/: meson.build
src/lib/draw/engines/eevee_next/: meson.build
src/lib/draw/engines/eevee_next/shaders/: meson.build
src/lib/draw/engines/gpencil/: meson.build
src/lib/draw/engines/gpencil/shaders/: meson.build
src/lib/draw/engines/image/: meson.build
src/lib/draw/engines/image/shaders/: meson.build
src/lib/draw/engines/overlay/: meson.build
src/lib/draw/engines/overlay/shaders/: meson.build
src/lib/draw/engines/select/: meson.build
src/lib/draw/engines/select/shaders/: meson.build
src/lib/draw/engines/workbench/: meson.build
src/lib/draw/engines/workbench/shaders/: meson.build
src/lib/draw/intern/: meson.build
src/lib/draw/intern/shaders/: meson.build
src/lib/eigen/: meson.build
src/lib/ghost/: meson.build
src/lib/gpu/: meson.build
src/lib/gpu/opengl/: meson.build
src/lib/gpu/shaders/: meson.build
src/lib/gpu/shaders/common/: meson.build
src/lib/gpu/shaders/material/: meson.build
src/lib/gpu/shaders/opengl/: meson.build
src/lib/guardedalloc/: MEM_guardedalloc.h  meson.build
src/lib/guardedalloc/intern/: leak_detector.cc  mallocn.cc  mallocn_guarded_impl.cc  mallocn_inline.h  mallocn_intern.h  mallocn_lockfree_impl.cc  memory_usage.cc
src/lib/imbuf/: meson.build
src/lib/libc_compat/: meson.build
src/lib/makesdna/: meson.build
src/lib/makesdna/intern/: dna_includes_all.h  dna_includes_as_strings.h
src/lib/makesrna/: RNA_prototypes.h  meson.build
src/lib/makesrna/intern/: meson.build
src/lib/memutil/: meson.build
src/lib/utfconv/: meson.build
src/lib/wayland_dynload/: meson.build
src/old/blenkernel_old/: BKE_context.hh  BKE_main.hh  meson.build
src/old/blenkernel_old/intern/: context.cc  meson.build
src/old/blenlib_old/: BLI_compiler_attrs.h  BLI_strict_flags.h  BLI_string.h  BLI_sys_types.h  meson.build
src/old/blenlib_old/intern/: math_vector_inline.c
src/old/ghost_old/: GHOST_IContext.hh  GHOST_ISystem.hh  GHOST_ITimerTask.hh  GHOST_IWindow.hh  GHOST_Rect.hh  GHOST_Types.h  meson.build
src/old/ghost_old/intern/: GHOST_Context.cc  GHOST_Context.hh  GHOST_ContextNone.cc  GHOST_ContextNone.hh  GHOST_EventDragnDrop copy.hh  GHOST_System.cc  GHOST_System.hh  GHOST_SystemWayland.hh  GHOST_WaylandUtils.hh  GHOST_Window.cc  GHOST_Window.hh
src/old/gpu_old/: meson.build
src/old/imbuf_old/: meson.build
src/old/makesdna_old/: DNA_listBase.h  meson.build
src/old/makesrna_old/: meson.build
tools/check_source/: check_licenses.py
tools/utils/: authors_git_gen.py
tools/utils_maintenance/: clang_format_paths.py
